# mutate-ocaml

./: .gitignore  Makefile  README.md  default.nix  experiment.ml
src/main/: dune  main.ml
src/mutator/: ast_monadic_mapper.ml  ast_monadic_mapper.mli  dune  generate.ml  monad.ml  monad.mli  mutator.ml  printer.ml  rules.ml  rules.mli  sequence.ml  sequence.mli
tests/: dune  example.ml  tests.ml
