(library
 (name mutator)
 (public_name mutator)
 (modules
  Mutator
  Rules
  Sequence
  Generate
  Monad
  Ast_monadic_mapper
 )
 (libraries compiler-libs.common)
 (wrapped false))

(rule
 (targets ocaml_common.ml)
 (deps
  (:first_dep ../gen/gen.exe))
 (action
  (run %{first_dep} -archive %{ocaml_where}/compiler-libs/ocamlcommon.cma -o
    %{targets})))
